--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 certifi==2017.7.27.1
 chardet==3.0.4
-django==2.0
+django>=2.0.11
 idna==2.6
 mysqlclient==1.3.10
 pytz==2017.2
-requests==2.18.4
-urllib3==1.22
+requests==>=2.20.0
+urllib3==1.24.2
